--- a/nao.html
+++ b/nao.html
@@ -58,57 +58,10 @@
   <div id="slider">
     <div class="slides">
       <div class="slide">
-        <img src="img/oficial/1.png" alt="Imagem 1">
-      </div>
-      <div class="slide">
-        <img src="img/oficial/2.png" alt="Imagem 2">
-      </div>
-      <div class="slide">
-        <img src="img/oficial/3.png" alt="Imagem 3">
-      </div>
-      <div class="slide">
-        <img src="img/oficial/4.png" alt="Imagem 4">
-      </div>
-      <div class="slide">
-        <img src="img/oficial/5.png" alt="Imagem 5">
-      </div>
-      <div class="slide">
-        <img src="img/oficial/6.png" alt="Imagem 6">
-      </div>
-      <div class="slide">
-        <img src="img/oficial/7.png" alt="Imagem 7">
-      </div>
-      <div class="slide">
-        <img src="img/oficial/8.png" alt="Imagem 8">
-      </div>
-      <div class="slide">
-        <img src="img/oficial/9.png" alt="Imagem 9">
-      </div>
-      <div class="slide">
-        <img src="img/oficial/10.png" alt="Imagem 10">
-      </div>
-      <div class="slide">
-        <img src="img/oficial/11.png" alt="Imagem 11">
-      </div>
-      <div class="slide">
-        <img src="img/oficial/12.png" alt="Imagem 12">
-      </div>
-      <div class="slide">
-        <img src="img/oficial/13.png" alt="Imagem 13">
-      </div>
-      <div class="slide">
-        <img src="img/oficial/14.png" alt="Imagem 14">
-      </div>
-      <div class="slide">
-        <img src="img/oficial/15.png" alt="Imagem 15">
-      </div>
-      <div class="slide">
-        <img src="img/oficial/16.png" alt="Imagem 16">
+        <img src="img/oficial/17.png" alt="Imagem 17">
       </div>
     </div>
-    <img class="arrow right" src="img/oficial/seta.png" onclick="changeSlide(1)">
   </div>
-
   <script>
     var slideIndex = 1;
     showSlide(slideIndex);
@@ -119,9 +72,9 @@
       
       //mudança para o ultimo slide
       //não aparece o utlimo slida
-      if (nextSlideIndex === 16) {
+      if (nextSlideIndex === 17) {
         // Redirecionar para outro HTML
-        window.location.href = "pedido.html";
+        window.location.href = "nao.html";
       } else {
         showSlide(nextSlideIndex);
       }
