--- a/pedido.html
+++ b/pedido.html
@@ -67,10 +67,9 @@
         <img src="img/oficial/16.png" alt="Imagem 17">
       </div>
     </div>
-
-    <img class="arrow left" src="img/oficial/sim.png" onclick="changeSlide(1)">
+    <img class="arrow left" src="img/oficial/sim.png">
     <a href="nao.html">
-      <img class="arrow right" src="img/oficial/nao.png" onclick="changeSlide(1)">
+      <img class="arrow right" src="img/oficial/nao.png">
     </a>
   </div>
 
